[package]
name = "blunt"
version = "0.0.6"
authors = ["Nelson J Morais <njmorais@gmail.com>"]
edition = "2018"
description = "Highly opinionated way to build asynchronous Websocket servers with Rust."
repository = "https://github.com/njasm/blunt/"
homepage = "https://github.com/njasm/blunt/"
license = "MIT OR Apache-2.0 OR MPL-2.0"
keywords = ["websocket", "asynchronous", "async", "tokio", "framework"]
categories = ["web-programming::websocket", "web-programming", "network-programming", "asynchronous"]
exclude = [
	".gitignore",
	".idea/*",
	".github/*",
	"examples/*",
	"target/*",
	"Cargo.lock"
]

[dependencies]
async-trait = "0"
tokio = { version = "1", features = ["full"] }
async-tungstenite = { version = "0.13", features = ["tokio-runtime"] }
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
tracing-subscriber = "0.2"
criterion = "0.3"
tungstenite = "0.13"

[[bench]]
name = "bench"
harness = false

